--- a/views/partials/side-bar.ejs
+++ b/views/partials/side-bar.ejs
@@ -5,12 +5,12 @@
             <p>Home</p>
         </div>
     </a>
-    <a href="/workshops" <% if(pageName === 'workshops') { %> class="side-bar__active" <% } %>>
-        <div class="side-bar__item">
-            <img src="/img/icons/workshops.svg"/>
-            <p>Workshops</p>
-        </div>
-    </a>
+    <!--<a href="/workshops" <% if(pageName === 'workshops') { %> class="side-bar__active" <% } %>>-->
+        <!--<div class="side-bar__item">-->
+            <!--<img src="/img/icons/workshops.svg"/>-->
+            <!--<p>Workshops</p>-->
+        <!--</div>-->
+    <!--</a>-->
     <a href="/timeline" <% if(pageName === 'timeline') { %> class="side-bar__active" <% } %>>
         <div class="side-bar__item">
             <img src="/img/icons/timeline.svg"/>
