--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,7 @@
     <% include ../partials/headers/index %>
 
     <link type="text/css" rel="stylesheet" href="./stylesheets/css/modules/timeline.css"/>
+    <script src="jquery.countdown.min.js"></script>
 
   </head>
   <body>
@@ -16,10 +17,10 @@
       </nav>
       <section id="main">
 
-        <!-- Vue Time Component-->
-        <div id="time" class="component-container">
-          <countdown v-bind:time="timeLeft"></countdown>
-        </div>
+        <!--&lt;!&ndash; Vue Time Component&ndash;&gt;-->
+        <!--<div id="time" class="component-container">-->
+          <!--<countdown v-bind:time="timeLeft"></countdown>-->
+        <!--</div>-->
 
 
         <div id="announcements" class="component-container">
@@ -96,13 +97,47 @@
     </script>
 
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      function getTimeRemaining(endtime) {
+        var t = Date.parse(endtime) - Date.parse(new Date());
+        var seconds = Math.floor((t / 1000) % 60);
+        var minutes = Math.floor((t / 1000 / 60) % 60);
+        var hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+        var days = Math.floor(t / (1000 * 60 * 60 * 24));
+        return {
+          'total': t,
+          'days': days,
+          'hours': hours,
+          'minutes': minutes,
+          'seconds': seconds
+        };
+      }
 
-      ga('create', 'UA-84559278-3', 'auto');
-      ga('send', 'pageview');
+      function initializeClock(id, endtime) {
+        var clock = document.getElementById(id);
+        var daysSpan = clock.querySelector('.days');
+        var hoursSpan = clock.querySelector('.hours');
+        var minutesSpan = clock.querySelector('.minutes');
+        var secondsSpan = clock.querySelector('.seconds');
+
+        function updateClock() {
+          var t = getTimeRemaining(endtime);
+
+          daysSpan.innerHTML = t.days;
+          hoursSpan.innerHTML = ('0' + t.hours).slice(-2);
+          minutesSpan.innerHTML = ('0' + t.minutes).slice(-2);
+          secondsSpan.innerHTML = ('0' + t.seconds).slice(-2);
+
+          if (t.total <= 0) {
+            clearInterval(timeinterval);
+          }
+        }
+
+        updateClock();
+        var timeinterval = setInterval(updateClock, 1000);
+      }
+
+      var deadline = new Date(Date.parse(new Date()) + 15 * 24 * 60 * 60 * 1000);
+      initializeClock('clockdiv', deadline);
 
     </script>
 
