--- a/views/pages/timeline.ejs
+++ b/views/pages/timeline.ejs
@@ -28,7 +28,7 @@
             </tr>
 
             <tr>
-              <td>MP242</td>
+              <td>Curzon Building</td>
               <td>9:30am</td>
               <td>11am</td>
               <td>Arrival</td>
@@ -36,7 +36,7 @@
             </tr>
 
             <tr>
-              <td>MP242</td>
+              <td>Main Hall</td>
               <td>11am</td>
               <td>12pm</td>
               <td>Opening talk</td>
@@ -44,7 +44,7 @@
             </tr>
 
             <tr>
-              <td>MP242</td>
+              <td>Main Hall</td>
               <td>12pm</td>
               <td>Sunday 4pm</td>
               <td>Start hacking</td>
@@ -52,7 +52,7 @@
             </tr>
 
             <tr>
-              <td>MP242</td>
+              <td>Main Hall</td>
               <td>12pm</td>
               <td>12:30pm</td>
               <td>Team Building</td>
