Feedback added and login fixed for incorrect user / password

--- a/public/stylesheets/css/main.css
+++ b/public/stylesheets/css/main.css
@@ -495,3 +495,8 @@ nav {
     cursor: pointer; }
 
 /* Main App CSS */
+.typeform {
+  margin: auto;
+  text-align: center; }
+  .typeform button {
+    margin: 40px auto; }
