--- a/views/partials/side-bar.ejs
+++ b/views/partials/side-bar.ejs
@@ -5,16 +5,22 @@
             <p>Home</p>
         </div>
     </a>
-    <!--<a href="/workshops" <% if(pageName === 'workshops') { %> class="side-bar__active" <% } %>>-->
-        <!--<div class="side-bar__item">-->
-            <!--<img src="/img/icons/workshops.svg"/>-->
-            <!--<p>Workshops</p>-->
-        <!--</div>-->
-    <!--</a>-->
     <a href="/timeline" <% if(pageName === 'timeline') { %> class="side-bar__active" <% } %>>
         <div class="side-bar__item">
             <img src="/img/icons/timeline.svg"/>
             <p>Timeline</p>
+        </div>
+    </a>
+    <a href="/feedback" <% if(pageName === 'feedback') { %> class="side-bar__active" <% } %>>
+        <div class="side-bar__item">
+            <img src="/img/icons/feedback.svg"/>
+            <p>Feedback</p>
+        </div>
+    </a>
+    <a href="/bullhacks" <% if(pageName === 'bullhacks') { %> class="side-bar__active" <% } %>>
+        <div class="side-bar__item">
+            <img src="/img/bullhacks-head.png"/>
+            <p>BullHacks 2.0</p>
         </div>
     </a>
     <a href="/login" <% if(pageName === 'admin') { %> class="side-bar__active" <% } %>>
