--- a/public/stylesheets/css/modules/timeline.css
+++ b/public/stylesheets/css/modules/timeline.css
@@ -495,6 +495,12 @@ nav {
     cursor: pointer; }
 
 /* Main App CSS */
+.typeform {
+  margin: auto;
+  text-align: center; }
+  .typeform button {
+    margin: 40px auto; }
+
 .timeline {
   margin: auto; }
   .timeline__page {
