--- a/views/pages/bullhacks.ejs
+++ b/views/pages/bullhacks.ejs
@@ -25,7 +25,7 @@
         <div id="mc_embed_signup">
           <form action="//bullhacks.us14.list-manage.com/subscribe/post?u=e77ba9ac4049e0c490af12b72&amp;id=d9b4b99627" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-              <h2>Register interest!</h2>
+              <h2>Subscribe to our mailing list</h2>
               <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
               <div class="mc-field-group">
                 <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
@@ -33,12 +33,14 @@
                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
               </div>
               <div class="mc-field-group">
-                <label for="mce-FNAME">First Name </label>
-                <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                <label for="mce-FNAME">First Name  <span class="asterisk">*</span>
+                </label>
+                <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
               </div>
               <div class="mc-field-group">
-                <label for="mce-LNAME">Last Name </label>
-                <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+                <label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
+                </label>
+                <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
               </div>
               <div class="mc-field-group">
                 <label for="mce-MMERGE3">University </label>
