--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -31,7 +31,7 @@ h1, h3{
     transform: translate(-50%, -50%);
     text-align: center;
     img{
-      width: 200px;
+      width: 90%;
     }
     h1{
       font-size: 50px;
@@ -67,7 +67,7 @@ h1, h3{
   #main{
     .main-content{
       img{
-        width: 150px;
+        width: 70%;
       }
       h1{
         font-size: 45px;
