--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,7 @@ h1, h3 {
   width: 90%;
   margin: auto; }
   #main .main-content img {
-    width: 90%; }
+    width: 50%; }
   #main .main-content h1 {
     font-size: 50px;
     padding: 40px 0px 20px 0px;
@@ -53,6 +53,14 @@ h1, h3 {
     width: 90%; }
   #main .main-content h1 {
     font-size: 45px; }
+  #main .main-content h3 {
+    font-size: 20px; } }
+@media screen and (max-width: 830px) {
+  #main .main-content img {
+    width: 90%; } }
+@media screen and (max-width: 600px) {
+  #main .main-content h1 {
+    font-size: 35px; }
   #main .main-content h3 {
     font-size: 20px; } }
 
