--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -33,7 +33,7 @@ h1, h3{
     width: 90%;
     margin: auto;
     img{
-      width: 90%;
+      width: 50%;
     }
     h1{
       font-size: 50px;
@@ -76,6 +76,29 @@ h1, h3{
       }
       h3{
         font-size: 20px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 830px){
+  #main{
+    .main-content{
+      img{
+        width: 90%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px){
+  #main{
+    .main-content{
+      h1{
+        font-size: 35px
+      }
+      h3{
+        font-size: 20px
       }
     }
   }
