--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -45,6 +45,12 @@ h1, h3{
       font-size: 25px;
       font-weight: 300;
     }
+    .reference{
+      margin: 10px 0px 15px 0px;
+      .website{
+        font-weight: bold;
+      }
+    }
     button{
       -webkit-appearence: none;
       padding: 15px 25px;
