--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="nav">
     <div class="nav__container vertC__relative">
         <img src="/img/bullhacks-head.png" alt="BullHacks"/>
-        <h3>BullHacks Event Tracker</h3>
+        <h3><%= subdomain %></h3>
     </div>
     <% if( verified ){ %>
         <a href="/login/logout">
