router middleware for subdomains

--- a/views/partials/headers/index.ejs
+++ b/views/partials/headers/index.ejs
@@ -1,5 +1,5 @@
 <meta charset="UTF-8"/>
-<title><%= subdomain %></title>
+<title><%= title %></title>
 <link rel='stylesheet' href='/stylesheets/css/main.css'/>
 <script src="/js/vue.js"></script>
 <link href="stylesheets/css/timetablejs.css" type="text/css" rel="stylesheet"/>
