inner join query and pass hackathon object to locals.hackathon

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="nav">
     <div class="nav__container vertC__relative">
-        <img src="/img/bullhacks-head.png" alt="BullHacks"/>
+        <img src="<%= hackathon.logoicon %>" alt="BullHacks"/>
         <h3><%= hackathon.name %></h3>
     </div>
     <% if( verified ){ %>
