--- a/public/stylesheets/css/admin-dash.css
+++ b/public/stylesheets/css/admin-dash.css
@@ -174,6 +174,18 @@ body {
   width: 100%;
   overflow: auto;
   padding-bottom: 20px; }
+  .page__custom__header {
+    padding: 30px 0px;
+    text-align: center; }
+    .page__custom__header img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%; }
+    .page__custom__header h2 {
+      padding-top: 15px; }
+  .page__custom__body {
+    width: 80%;
+    margin: auto; }
 
 #main {
   width: 90%;
