--- a/views/pages/create-event.ejs
+++ b/views/pages/create-event.ejs
@@ -2,7 +2,8 @@
 <html>
 <head>
     <% include ../partials/headers/login-head %>
-
+<script type="text/javascript" src="https://cdn.rawgit.com/mugifly/jquery-simple-datetimepicker/master/jquery.simple-dtpicker.js"></script>
+	<link type="text/css" href="https://cdn.rawgit.com/mugifly/jquery-simple-datetimepicker/master/jquery.simple-dtpicker.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -31,7 +32,11 @@
                 </form>
             </div>
         </div>
-
+<script type="text/javascript">
+		$('#time').appendDtpicker({
+            "autodateOnStart": true
+        });
+	</script>
     </section>
 </section>
 
