working custom pages

--- a/views/pages/custom-page.ejs
+++ b/views/pages/custom-page.ejs
@@ -3,7 +3,7 @@
   <head>
     <% include ../partials/headers/index %>
 
-    <link type="text/css" rel="stylesheet" href="./stylesheets/css/modules/timeline.css"/>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/css/modules/timeline.css"/>
 
   </head>
   <body>
@@ -17,12 +17,8 @@
       <section id="main">
 
         <div class="page__custom">
-          <div class="page__custom__header">
-            <img src="#">
-            <h2>Page Name</h2>
-          </div>
           <div class="page__custom__body">
-            here is some page conytent
+            <%- pageContent %>
           </div>
         </div>
 
