--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,7 +42,14 @@
 
 
         <div id="timeline" class="component-container component-container__two-third component-container__right">
-          <timeline></timeline>
+          <div class="component float__right">
+            <div class="component__header">
+                <h3>Timeline</h3>
+            </div>
+            <%- hackathon.timeline  %>
+
+          
+          </div>
         </div>
 
       </section>
