--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -97,7 +97,7 @@
         if(getCookie("uniq") == false){
           Push.create("Notifications Enabled", {
             body: "Thank you for turning notifications on for MesaHub! I hope I can be of great help.",
-            icon: "/img/bullhacks-head.png",
+            icon: "/img/mesahub.png",
             timeout: 4000,
             onClick: function () {
               window.focus();
