--- a/views/partials/headers/index.ejs
+++ b/views/partials/headers/index.ejs
@@ -6,4 +6,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="/js/push.min.js"></script>
 <script src="js/timetable.min.js"></script>
-<link rel="icon" type="image/png" href="/img/bullhacks-head.png">
+<link rel="icon" type="image/png" href="/img/mesahub.png">
