page button in admin console

--- a/views/pages/admin-dashboard.ejs
+++ b/views/pages/admin-dashboard.ejs
@@ -41,6 +41,12 @@
                         <h3>Announcement</h3>
                     </div>
                 </a>
+                <a href="/admin/page">
+                    <div class="floating-box admin-controls__item">
+                        <img src="/img/icons/add-event.svg"/>
+                        <h3>Add Page</h3>
+                    </div>
+                </a>
             </div>
 
             <div class="upload-event floating-box">
