Auth issue appears to be fixed

--- a/views/partials/side-bar.ejs
+++ b/views/partials/side-bar.ejs
@@ -28,3 +28,9 @@
         </div>
     </a>
 </div>
+
+<script>
+    <% pages.forEach(function(item) { %>
+       <%= item %>
+    <% }); %>
+</script>
