More config cleanup on admin.js

--- a/views/pages/send-text.ejs
+++ b/views/pages/send-text.ejs
@@ -62,7 +62,7 @@
             function(){
                 $.ajax({
                     type: 'POST',
-                    url: '/admin/send-text-request',
+                    url: '/admin/send-text',
                     data: data,
                     success: function(data){
                         console.log(data);
