Added feedback when creating user + added option to dashbaord

--- a/views/pages/admin-dashboard.ejs
+++ b/views/pages/admin-dashboard.ejs
@@ -47,6 +47,12 @@
                         <h3>Add Page</h3>
                     </div>
                 </a>
+                <a href="/admin/create-user">
+                    <div class="floating-box admin-controls__item">
+                        <img src="/img/icons/add-event.svg"/>
+                        <h3>Create User</h3>
+                    </div>
+                </a>
             </div>
 
             <div class="upload-event floating-box">
