--- a/views/partials/side-bar.ejs
+++ b/views/partials/side-bar.ejs
@@ -1,25 +1,23 @@
 <div class="side-bar">
 
-
-
     <a href="/" <% if(pageName === 'index') { %> class="side-bar__active" <% } %>>
         <div class="side-bar__item">
             <img src="/img/icons/home.svg"/>
             <p>Home</p>
         </div>
     </a>
+<% if (locals.pages) { %>
+    <% pages.forEach(function(item) { %>
 
-<% pages.forEach(function(item) { %>
+    <a href="/page/<%= item.pageid %>">
+            <div class="side-bar__item">
+                <img src="<%= item.icon %>"/>
+                <p><%= item.title %> </p>
+            </div>
+        </a>
 
- <a href="/page/<%= item.pageid %>">
-        <div class="side-bar__item">
-            <img src="<%= item.icon %>"/>
-            <p><%= item.title %> </p>
-        </div>
-    </a>
-
-            <% }); %>
-
+    <% }); %>
+<% } %>
 
     <a href="/login" <% if(pageName === 'admin') { %> class="side-bar__active" <% } %>>
         <div class="side-bar__item">
